# methylEZ

./: JJN3ABT_EKDL230011527-1A_2_1_val_1_bismark_bt2_pe.deduplicated.bam_hs_metrics.txt  MANUAL.md  README.md  concat_fastq 1.py  gui.py  main.py  methylEZ.code-workspace  methylkit_template.R  navigation.py  pyproject.toml  setup.py  temp.txt  test_export.txt
.github/: copilot-instructions.md
methylEZ/: .gitignore  MANIFEST.in  README.md  __init__.py  command_generator.py  dmr_gui.py  dmr_template_generator.py  dmr_template_generator_2.py  file_manager.py  gui.py  hsmetrics_command_generator.py  hsmetrics_gui.py  hsmetrics_main_gui.py  hsmetrics_parser.py  hsmetrics_preparation.py  hsmetrics_runner.py  main.py  navigation.py  pyproject.toml  utils.py
methylEZ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
methylEZ/assets.egg-info/: SOURCES.txt
methylEZ/methylEZ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
validation_examples/: Appendix.docx
