[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methylEZ"
version = "0.1"
description = "A GUI for Methylation Sequencing Workflow Preparation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["methylation", "bioinformatics", "epigenetics", "GUI"]
authors = [
  { name = "Alejandra Rodriguez-Sosa", email = "your-email@example.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandas",
  "pyperclip", 
  "ttkthemes",
  "biopython",
  "click"
]

[project.urls]
Homepage = "https://github.com/AlejRSosa/methylEZ"
Issues = "https://github.com/AlejRSosa/methylEZ/issues"
Source = "https://github.com/AlejRSosa/methylEZ"

[project.scripts]
methylEZ = "methylEZ.main:main"

[tool.setuptools.package-data]
methylEZ = ["assets/*.png", "assets/*.jar"]
